tests/ui/parser/issues/misplaced-return-type-without-type-issue-126311.rs
fn foo<T>() where T: Default -> {
//~^ ERROR expected one of `(`, `+`, `,`, `::`, `<`, or `{`, found `->`
    0
}

fn main() {}
